--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "js-priority-queue": "^0.1.3",
     "jszip": "^2.5.0",
     "paralleljs": "^0.2.1",
-    "three": "^0.74.0",
+    "three.js": "mrdoob/three.js#35a5994828da7cebc0d8442062f784b3f9e1f818",
     "when": "^1.7.1"
   },
   "devDependencies": {
